--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -98,10 +98,19 @@ select {
     float: right;
     margin-left: 20px;
     background-color: rgb(255, 255, 255);
-    height: 70px;
+    height: 85px;
     width: 100px;
     border-style: none;
 }
+
+.animate-show-hide.ng-hide {
+    opacity: 0;
+  }
+  
+  .animate-show-hide.ng-hide-add,
+  .animate-show-hide.ng-hide-remove {
+    transition: all linear 0.5s;
+  }
 
 .task-completed-button:hover {
     float: right;
@@ -109,7 +118,7 @@ select {
     background-color: rgba(45,45,45,1);
     font-weight: bold;
     color: rgb(255, 255, 255);
-    height: 70px;
+    height: 85px;
     width: 100px;
     border-style: none;
 }
@@ -125,7 +134,7 @@ select {
     background-color: rgb(255, 255, 255);
     margin-top: 10px;
     padding-left: 20px;
-    height: 70px;
+    height: 85px;
     width: 100%;
 }
 
@@ -135,7 +144,7 @@ select {
     background-color: rgb(255, 255, 255);
     margin-top: 10px;
     padding-left: 20px;
-    height: 70px;
+    height: 85px;
     width: 100%;
 }
 
@@ -146,6 +155,6 @@ select {
     margin-top: 10px;
     padding-top: 10px;
     padding-left: 20px;
-    height: 70px;
+    height: 85px;
     width: 100%;
 }
