--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -3,14 +3,14 @@
     <!--
         <div class='task-list'>
             <h2>Expired Tasks</h2>
-            <div ng-repeat='task in history.tasks' ng-class="'expiredTask'">
-                <span style="font-size:30px;">{{ task.description }}</span> <button class='task-completed-button'>Move to Tasks</button><br> Priority: {{ task.priority }}
+            <div ng-repeat='task in history.tasks' ng-class="'expiredTask'" ng-show="history.expiredTask(task)">
+                <span style="font-size:30px;">{{ task.description }}</span> <button class='task-completed-button' ng-click="history.taskReset(task)">Reset Task</button><br> Priority: {{ task.priority }}
             </div>
         </div>
         <br>
         <div class='task-list'>
             <h2>Completed Tasks</h2>
-            <div ng-repeat='task in history.tasks' ng-class="'completedTask'">
+            <div ng-repeat='task in history.tasks' ng-class="'completedTask'" ng-show="history.completedTask(task)">
                 <span style="font-size:30px;">{{ task.description }}</span>
             </div>
         </div>
