Hide Old Tasks - Completed

--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -1,18 +1,20 @@
 <div class='history-window'>
         
-    <!--
-        <div class='task-list'>
-            <h2>Expired Tasks</h2>
-            <div ng-repeat='task in history.tasks' ng-class="'expiredTask'" ng-show="history.expiredTask(task)">
+    
+    <div class='task-list'>
+        <h2>Expired Tasks</h2>
+            <div ng-repeat='task in history.tasks' ng-class="'expiredTask'" ng-if="history.expiredTask(task)">
                 <span style="font-size:30px;">{{ task.description }}</span> <button class='task-completed-button' ng-click="history.taskReset(task)">Reset Task</button><br> Priority: {{ task.priority }}
             </div>
-        </div>
-        <br>
-        <div class='task-list'>
-            <h2>Completed Tasks</h2>
-            <div ng-repeat='task in history.tasks' ng-class="'completedTask'" ng-show="history.completedTask(task)">
+    </div>
+    
+    <br>
+    
+    <div class='task-list'>
+        <h2>Completed Tasks</h2>
+            <div ng-repeat='task in history.tasks' ng-class="'completedTask'" ng-if="history.completedTask(task)">
                 <span style="font-size:30px;">{{ task.description }}</span>
             </div>
-        </div>
-    -->
+    </div>
+    
 </div>
