--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -18,7 +18,7 @@
     </div>
    
     <div class='task-list'>
-        <div ng-class="'activeTask'" ng-repeat='task in home.tasks' ng-show="home.activeTask(task)">
+        <div ng-class="'activeTask'" ng-repeat='task in home.tasks' ng-if="home.activeTask(task)">
             <span style="font-size:30px;">{{ task.description }}</span> <button class='task-completed-button' ng-click="home.taskCompleted(task)" >Mark As Completed</button><br> Priority: {{ task.priority }} <br> Expires In:  day(s)
         </div>
     </div>
